# forward

./: .pre-commit-config.yaml  Makefile  README.md  config.example.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: bench.py  profile.py
src/forward_monitor/: __init__.py  __main__.py  app.py  config.py  config_store.py  discord.py  discord_client.py  discord_gateway.py  filters.py  formatter.py  formatting.py  models.py  monitor.py  networking.py  state.py  structured_logging.py  telegram.py  telegram_client.py  types.py  utils.py
stubs/yaml/: __init__.pyi
tests/: conftest.py  test_app.py  test_attachments_style.py  test_config.py  test_config_store.py  test_discord_client.py  test_filters.py  test_formatter.py  test_formatting.py  test_formatting_escape.py  test_main.py  test_monitor_filters.py  test_monitor_forwarding.py  test_monitor_pins.py  test_monitor_run.py  test_send_formatted.py  test_state.py  test_telegram_client.py  test_telegram_commands.py  test_telegram_controller.py  test_utils.py
