[project]
name = "forward-monitor"
version = "0.1.0"
description = "Discord to Telegram monitor"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.dependencies]
aiohttp = "^3.9.0"
pyyaml = "^6.0"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
